--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.7",
     "core-js": "^3.8.3",
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "element-plus": "^2.7.2",
-    "pinia": "^2.1.7",
     "js-cookie": "^3.0.5",
+    "pinia": "^2.1.7",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.3.2",
     "vuex": "^4.0.2"
   },
@@ -29,7 +31,7 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "sass": "^1.32.0",
-    "sass-loader": "^11.0.1"  
+    "sass-loader": "^11.0.1"
   },
   "eslintConfig": {
     "root": true,
