--- a/pom.xml
+++ b/pom.xml
@@ -42,9 +42,6 @@
 
         <aliyun-sdk-oss.version>3.16.3</aliyun-sdk-oss.version>
 
-        <!-- redisson 分布式锁 -->
-        <redisson.version>3.30.0</redisson.version>
-
         <!-- 自动代码生成 -->
         <mybatis-plus-generator.version>3.5.6</mybatis-plus-generator.version>
         <velocity.version>2.3</velocity.version>
@@ -52,10 +49,18 @@
         <!-- IP 地区转换 -->
         <ip2region.version>2.7.0</ip2region.version>
 
-        <!-- 阿里云短信 -->
-        <aliyun.java.sdk.core.version>4.6.4</aliyun.java.sdk.core.version>
-        <aliyun.java.sdk.dysmsapi.version>2.2.1</aliyun.java.sdk.dysmsapi.version>
     </properties>
+
+    <repositories>
+        <repository>
+            <id>central</id>
+            <url>https://repo.maven.apache.org/maven2</url>
+        </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>    
 
     <dependencies>
         <dependency>
@@ -180,13 +185,6 @@
             <artifactId>aliyun-sdk-oss</artifactId>
             <version>${aliyun-sdk-oss.version}</version>
         </dependency>
-
-        <!-- redisson 分布式锁 -->
-        <dependency>
-            <groupId>org.redisson</groupId>
-            <artifactId>redisson-spring-boot-starter</artifactId>
-            <version>${redisson.version}</version>
-        </dependency>  
     
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -224,18 +222,24 @@
         </dependency>
 
         <dependency>
-            <groupId>com.aliyun</groupId>
-            <artifactId>aliyun-java-sdk-core</artifactId>
-            <version>${aliyun.java.sdk.core.version}</version>
+            <groupId>com.huaban</groupId>
+            <artifactId>jieba-analysis</artifactId>
+            <version>1.0.2</version>
         </dependency>
-
-
 
         <dependency>
-            <groupId>com.aliyun</groupId>
-            <artifactId>aliyun-java-sdk-dysmsapi</artifactId>
-            <version>${aliyun.java.sdk.dysmsapi.version}</version>
+                <groupId>com.theokanning.openai-gpt3-java</groupId>
+                <artifactId>service</artifactId>
+                <version>0.11.0</version>
         </dependency>
+        <dependency>
+                <groupId>com.theokanning.openai-gpt3-java</groupId>
+                <artifactId>client</artifactId>
+                <version>0.11.0</version>
+        </dependency>
+
+
+
 
     </dependencies>
 
