--- a/DockerFile
+++ b/DockerFile
@@ -1,22 +1,14 @@
-# 基础镜像
-FROM openjdk:17-jdk-alpine
+# 使用官方的 OpenJDK 镜像
+FROM openjdk:17-jdk
 
+# 设置工作目录
+WORKDIR /app
 
-# 设置国内镜像源(中国科技大学镜像源)，修改容器时区(alpine镜像需安装tzdata来设置时区)，安装字体库(验证码)
-RUN echo -e https://mirrors.ustc.edu.cn/alpine/v3.7/main/ > /etc/apk/repositories  \
-    && apk --no-cache add tzdata && cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo "Asia/Shanghai" > /etc/timezone \
-    && apk --no-cache add ttf-dejavu fontconfig
+# 复制构建好的 JAR 文件到容器
+COPY target/*.jar app.jar
 
-# 在运行时自动挂载 /tmp 目录为匿名卷，提高可移植性
-VOLUME /tmp
+# 设置 Spring Boot 项目的启动命令
+ENTRYPOINT ["java", "-jar", "/app/app.jar"]
 
-# 将构建的 Spring Boot 可执行 JAR 复制到容器中，重命名为 app.jar
-ADD target/bishaoshao_backend.jar app.jar
-
-# 指定容器启动时执行的命令
-CMD java \
-    -Djava.security.egd=file:/dev/./urandom \
-    -jar /app.jar
-
-# 暴露容器的端口
+# 映射容器端口到宿主机端口
 EXPOSE 8082
